manifest/deploy-time.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: time
  name: deploy-time
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: time
  template:
    metadata:
      labels:
        app: time
    spec:
      containers:
        - name: time-container
          image: "058264152241.dkr.ecr.ap-northeast-2.amazonaws.com/juju:1809c76fb225e4b0b4a5d22d3b74bf13e737809f"
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ap-northeast-2-ecr-registry-2
