manifest/svc-time.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-time
  namespace: default
spec:
  type: NodePort
  selector:
    app: time
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
